# meterplot

./: .gitignore  .travis.yml  Makefile  README.md  requirements.txt  setup.cfg  setup.py  show_data  test.yml  test_electricity.yml  test_water.yml  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
meterplot/: __about__.py  __init__.py  cli.py  helpers.py  main.py
test/: test_cli.py  test_electricity.yml  test_meterplot.py  test_water.yml  test_watts.py
tools/: meterplot  test_electricity.yml  watts
watts/: __about__.py  __init__.py  helpers.py
