[metadata]
name = meterplot
version = 0.3.0
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Display water/electricity consumption data
url = https://github.com/nschloe/meterplot
project_urls =
    Code=https://github.com/nschloe/meterplot
    Issues=https://github.com/nschloe/meterplot/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Graphics :: Presentation
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    matplotlib
    numpy
    pyyaml
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel

[options.entry_points]
console_scripts =
    meterplot = meshio.cli:main
